--- a/female.html
+++ b/female.html
@@ -189,6 +189,141 @@
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
         </div>
+
+        <!-- Dress 7 -->
+        <div class="dress-item">
+          <img src="images/Blue_black_white_adire_bubu_gown.jpeg" alt="Blue, black and white Adire bubu gown designed with ashoke plus the purse">
+          <p><strong>Blue, black and white Adire bubu gown designed with ashoke plus the purse</strong></p>
+          <p>Price: €105 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">46</option>
+    <option value="26">48</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+    <option value="50">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-2UY3URNY2TYFW{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/2UY3URNY2TYFW" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-2UY3URNY2TYFW" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 8 -->
+        <div class="dress-item">
+          <img src="images/Green_black_white_adire_bubu_gown.jpeg" alt="Green, black and white Adire bubu gown designed with ashoke plus the purse">
+          <p><strong>Green, black and white Adire bubu gown designed with ashoke plus the purse</strong></p>
+          <p>Price: €105 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">46</option>
+    <option value="26">48</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+    <option value="50">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-L5KXCB535EP4S{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/L5KXCB535EP4S" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-L5KXCB535EP4S" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 9 -->
+        <div class="dress-item">
+          <img src="images/Purple_black_white_adire_bubu_gown.jpeg" alt="Purple, black and white Adire bubu gown designed with ashoke plus the purse">
+          <p><strong>Purple, black and white Adire bubu gown designed with ashoke plus the purse</strong></p>
+          <p>Price: €105 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">46</option>
+    <option value="26">48</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+    <option value="50">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-AMG9H4AHZF26N{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/AMG9H4AHZF26N" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-AMG9H4AHZF26N" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 10 -->
+        <div class="dress-item">
+          <img src="images/ash_black_adire_bubu_gown.jpeg" alt="Ash and black Adire bubu gown designed with ashoke plus the purse">
+          <p><strong>Ash and black Adire bubu gown designed with ashoke plus the purse</strong></p>
+          <p>Price: €105 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">46</option>
+    <option value="26">48</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+    <option value="50">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-BN68JY5UXDYW6{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/BN68JY5UXDYW6" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-BN68JY5UXDYW6" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 11 -->
+        <div class="dress-item">
+          <img src="images/brown_black_adire_bubu_gown.jpeg" alt="Brown and black Adire bubu gown designed with ashoke and its bag">
+          <p><strong>Brown and black Adire bubu gown designed with ashoke and its bag</strong></p>
+          <p>Price: €105 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">46</option>
+    <option value="26">48</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+    <option value="50">54</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-BPGS2UEKLNBK8{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/BPGS2UEKLNBK8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-BPGS2UEKLNBK8" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
       </div>
     </section>
   </main>
