--- a/female.html
+++ b/female.html
@@ -324,6 +324,110 @@
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
         </div>
+
+        <!-- Dress 12 -->
+        <div class="dress-item">
+          <img src="images/Three-quarter _Brown _Adire_gown.jpeg" alt="Three-quarter Brown Adire gown designed with Ashoke">
+          <p><strong>Three-quarter Brown Adire gown designed with Ashoke</strong></p>
+          <p>Price: €55,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">40</option>
+    <option value="26">42</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-NS545XE66UBRA{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/NS545XE66UBRA" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-NS545XE66UBRA" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 13 -->
+        <div class="dress-item">
+          <img src="images/Three-quarter_Purple_Adire_Gown.jpeg" alt="Three-quarter Purple Adire gown designed with Ashoke">
+          <p><strong>Three-quarter Purple Adire gown designed with Ashoke</strong></p>
+          <p>Price: €55,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">40</option>
+    <option value="26">42</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-LNWBVUWUQ8PR8{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/LNWBVUWUQ8PR8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-LNWBVUWUQ8PR8" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 14 -->
+        <div class="dress-item">
+          <img src="images/Three-quarter_Green_Adire_Gown.jpeg" alt="Three-quarter Green Adire gown designed with Ashoke">
+          <p><strong>Three-quarter Green Adire gown designed with Ashoke</strong></p>
+          <p>Price: €55,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">40</option>
+    <option value="26">42</option>
+    <option value="48">46</option>
+    <option value="50">48</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+          <style>.pp-MNWEYG4AQC7KN{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/MNWEYG4AQC7KN" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-MNWEYG4AQC7KN" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
+
+        <!-- Dress 15 -->
+        <div class="dress-item">
+          <img src="images/Three-quarter_Blue_Adire_Gown.jpeg" alt="Three-quarter Blue Adire gown designed with Ashoke">
+          <p><strong>Three-quarter Blue Adire gown designed with Ashoke</strong></p>
+          <p>Price: €55,50 (includes shipping)</p>
+
+            <label for="size1"><strong>Select Your Size:</strong></label><br>
+  <select id="size1" name="size1">
+    <option value="24">40</option>
+    <option value="26">42</option>
+    <option value="48">50</option>
+    <option value="50">52</option>
+  </select>
+
+  <p style="font-size: 0.9em; color: #555;">
+    After payment, please confirm your selected size via WhatsApp or email.
+  </p>
+
+   <style>.pp-CPMNNKEPKHFFY{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/CPMNNKEPKHFFY" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-CPMNNKEPKHFFY" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+        </div>
       </div>
     </section>
   </main>
