--- a/books.html
+++ b/books.html
@@ -144,5 +144,46 @@
       }
     }
   </script>
+
+  <!-- Book: Almost Forever -->
+<div class="book-container">
+  <div class="book-cover">
+    <img src="images/AlmostForever_cover.jpg" alt="Almost Forever">
+  </div>
+  <div class="book-details">
+    <h2>Almost Forever</h2>
+    <p><em>By Dorothy Ifeanyi Makasi</em></p>
+    <p>A moving story of love, time, and the impossible choice between what we want and what we must do.
+    A tale that lingers in the heart — full of emotion and depth.</p>
+    <p><strong>Format:</strong> eBook (PDF)</p>
+  </div>
+  <div class="book-actions">
+
+    <!-- Borrow for 2 weeks – €4 -->
+    <style>.pp-4TA3NYB3A3N4S{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/4TA3NYB3A3N4S" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-4TA3NYB3A3N4S" type="submit" value="Borrow for 2 weeks – €4.00" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+    </form>
+
+    <!-- Borrow for 4 weeks – €6.80 -->
+    <style>.pp-RPQ2CJB6FQZFA{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/RPQ2CJB6FQZFA" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-RPQ2CJB6FQZFA" type="submit" value="Borrow for 4 weeks – €6.80" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+    </form>
+
+    <!-- Buy Forever – €10 -->
+    <style>.pp-ZNQ2Y684NSGF4{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/ZNQ2Y684NSGF4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-ZNQ2Y684NSGF4" type="submit" value="Buy Forever – €10.00" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+    </form>
+
+  </div>
+</div>
 </body>
 </html>
