--- a/index.html
+++ b/index.html
@@ -5,19 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
+  <link rel="icon" href="images/background.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
-  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOTlogo.jpg">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/background.jpg">
   <meta property="og:url" content="https://jedotholdingservices.com">
   <meta name="twitter:card" content="summary_large_image">
+
+  <style>
+    body {
+      background-image: url('images/background.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+
+    .hero {
+      padding: 2rem;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.0); /* transparent overlay, just in case */
+    }
+
+    nav {
+      text-align: center;
+      margin-top: 1rem;
+    }
+
+    nav button {
+      margin: 0.5rem;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+      border-radius: 0.3rem;
+    }
+
+    .products {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    .product-buttons button {
+      margin: 0.5rem;
+      padding: 0.75rem 1.25rem;
+      font-weight: bold;
+      border-radius: 0.3rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(255, 255, 255, 0.6);
+      margin-top: 3rem;
+    }
+  </style>
 </head>
+
 <body>
   <header>
-    <div class="hero">
-      <h1>Jedot Holding Services</h1>
-      <p class="slogan">Looking good is good business</p>
-    </div>
+    <div class="hero"></div>
     <nav>
       <a href="about.html"><button>About</button></a>
       <a href="contact.html"><button>Contact</button></a>
@@ -25,29 +70,29 @@
     </nav>
   </header>
 
-<main>
-  <section class="products">
-    <h2>Products</h2>
-    <div class="product-buttons">
-      <a href="books.html"><button>Jedot Books</button></a>
-      <a href="music.html"><button>Jedot Music</button></a>
-      <button onclick="toggleClothing()">Jedot African Designers Clothes</button>
-    </div>
+  <main>
+    <section class="products">
+      <h2>Products</h2>
+      <div class="product-buttons">
+        <a href="books.html"><button>Jedot Books</button></a>
+        <a href="music.html"><button>Jedot Music</button></a>
+        <button onclick="toggleClothing()">Jedot African Designers Clothes</button>
+      </div>
 
-    <div id="clothing-sub" style="display: none; margin-top: 10px;">
-      <h3>Clothing Categories</h3>
-      <a href="male.html"><button>Men</button></a>
-      <a href="female.html"><button>Women</button></a>
-    </div>
-  </section>
-</main>
+      <div id="clothing-sub" style="display: none; margin-top: 10px;">
+        <h3>Clothing Categories</h3>
+        <a href="male.html"><button>Men</button></a>
+        <a href="female.html"><button>Women</button></a>
+      </div>
+    </section>
+  </main>
 
-<script>
-  function toggleClothing() {
-    const section = document.getElementById("clothing-sub");
-    section.style.display = section.style.display === "none" ? "block" : "none";
-  }
-</script>
+  <script>
+    function toggleClothing() {
+      const section = document.getElementById("clothing-sub");
+      section.style.display = section.style.display === "none" ? "block" : "none";
+    }
+  </script>
 
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
