--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/background.jpg" type="image/jpg">
+  <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
-  <meta property="og:image" content="https://jedotholdingservices.com/images/background.jpg">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOTlogo.jpg">
   <meta property="og:url" content="https://jedotholdingservices.com">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('images/background.jpg'); /* update this if needed */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -24,7 +24,8 @@
     .hero {
       padding: 2rem;
       text-align: center;
-      background-color: rgba(255, 255, 255, 0.0); /* transparent overlay, just in case */
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.3); /* optional overlay */
     }
 
     nav {
@@ -54,7 +55,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: rgba(255, 255, 255, 0.6);
+      background-color: rgba(0, 0, 0, 0.1);
       margin-top: 3rem;
     }
   </style>
