--- a/index.html
+++ b/index.html
@@ -5,32 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
+  <link rel="icon" href="images/background.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
-  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOTlogo.jpg">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/background.jpg">
   <meta property="og:url" content="https://jedotholdingservices.com">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
     body {
-      background-image: url('images/background.jpg'); /* update this if needed */
-      background-size: cover;
-      background-position: center;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image: url('images/background.jpg');
+      background-size: contain;
       background-repeat: no-repeat;
+      background-position: top center;
       background-attachment: fixed;
-    }
-
-    .hero {
-      padding: 2rem;
-      text-align: center;
-      color: #fff;
-      background-color: rgba(0, 0, 0, 0.3); /* optional overlay */
     }
 
     nav {
       text-align: center;
-      margin-top: 1rem;
+      margin-top: 16rem; /* pushes content below the background logo */
     }
 
     nav button {
@@ -55,21 +50,19 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background-color: rgba(0, 0, 0, 0.1);
       margin-top: 3rem;
+      background-color: rgba(255, 255, 255, 0.6);
     }
   </style>
 </head>
 
 <body>
-  <header>
-    <div class="hero"></div>
-    <nav>
-      <a href="about.html"><button>About</button></a>
-      <a href="contact.html"><button>Contact</button></a>
-      <a href="services.html"><button>Services</button></a>
-    </nav>
-  </header>
+
+  <nav>
+    <a href="about.html"><button>About</button></a>
+    <a href="contact.html"><button>Contact</button></a>
+    <a href="services.html"><button>Services</button></a>
+  </nav>
 
   <main>
     <section class="products">
@@ -98,5 +91,6 @@
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
