--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 <body>
   <header>
     <div class="hero">
-
-
-
-
+         <h1>Jedot Holding Services</h1>
 
       
+      <p class="slogan">A home of arts, skills & humanity</p>
     </div>
     <nav>
       <a href="about.html"><button>About</button></a>
