--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
       text-decoration: none;
       font-weight: bold;
     }
+    .clothing-sub {
+      display: none;
+      margin-top: 10px;
+    }
+    .clothing-sub a button {
+      margin: 5px;
+      background-color: #0b3d91;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
     footer {
       text-align: center;
       padding: 15px;
@@ -89,17 +103,32 @@
       color: white;
     }
   </style>
+  <script>
+    function toggleClothing() {
+      const section = document.getElementById("clothing-sub");
+      section.style.display = section.style.display === "none" ? "block" : "none";
+    }
+  </script>
 </head>
 <body>
   <header class="topbar">
     <div class="logo">Jedot</div>
     <input type="text" class="search" placeholder="Search books, music, clothes...">
     <div class="nav-links">
-      <a href="books.html"> Jedot Books</a>
-      <a href="music.html"> Jedot Music</a>
-      <a href="female.html">Jedot African Designers Clothes</a>
+      <a href="books.html">Jedot Books</a>
+      <a href="music.html">Jedot Music</a>
+      <a href="#" onclick="toggleClothing()">Jedot African Designers Clothes</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </div>
   </header>
+
+  <div id="clothing-sub" class="clothing-sub" style="text-align:center;">
+    <h3>Clothing Categories</h3>
+    <a href="male.html"><button>Men</button></a>
+    <a href="female.html"><button>Women</button></a>
+  </div>
 
   <main class="featured-products">
     <h2>Featured Books</h2>
@@ -115,7 +144,7 @@
         <a href="books.html">View</a>
       </div>
       <div class="product-card">
-        <img src="images/AlmostForever_cover.jpg" alt="Almost Forever">
+        <img src="images/almostforevercover.jpg" alt="Almost Forever">
         <h3>Almost Forever</h3>
         <a href="books.html">View</a>
       </div>
