--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/background.jpg" type="image/jpg">
+  <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
   <meta property="og:image" content="https://jedotholdingservices.com/images/background.jpg">
@@ -112,7 +112,9 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="logo">Jedot</div>
+    <div class="logo">
+  <img src="images/background.jpg" alt="Jedot Logo" style="height: 40px;">
+</div>
     <input type="text" class="search" placeholder="Search books, music, clothes...">
     <div class="nav-links">
       <a href="books.html">Jedot Books</a>
