--- a/index.html
+++ b/index.html
@@ -2,171 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jedot Holding Services</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/background.jpg" type="image/jpg">
+  <link rel="icon" href="images/JEDOTlogo.jpg" type="image/jpg">
   <meta property="og:title" content="Jedot Holding Services">
   <meta property="og:description" content="African fashion, music, books, and creative services by Dorothy & Jessica.">
-  <meta property="og:image" content="https://jedotholdingservices.com/images/background.jpg">
+  <meta property="og:image" content="https://jedotholdingservices.com/images/JEDOTlogo.jpg">
   <meta property="og:url" content="https://jedotholdingservices.com">
   <meta name="twitter:card" content="summary_large_image">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
-    }
-    .topbar {
-      display: flex;
-      align-items: center;
-      background-color: #0b3d91; /* Jedot blue */
-      color: white;
-      padding: 10px 20px;
-    }
-    .topbar .logo img {
-      height: 40px;
-    }
-    .search {
-      flex-grow: 1;
-      padding: 8px;
-      border-radius: 4px;
-      border: none;
-      font-size: 1rem;
-    }
-    .nav-links a {
-      color: white;
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .featured-products {
-      padding: 20px;
-      background-color: #f2f2f2;
-      text-align: center;
-    }
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .product-card {
-      background: white;
-      padding: 15px;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .product-card img {
-      width: 100%;
-      border-radius: 5px;
-    }
-    .product-card h3 {
-      margin: 10px 0 5px;
-      color: #0b3d91;
-    }
-    .product-card p {
-      color: #222;
-      font-weight: bold;
-    }
-    .product-card a {
-      display: inline-block;
-      margin-top: 10px;
-      background-color: #fbc02d; /* Jedot gold */
-      color: #111;
-      padding: 8px 12px;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .clothing-sub {
-      display: none;
-      margin-top: 10px;
-    }
-    .clothing-sub a button {
-      margin: 5px;
-      background-color: #0b3d91;
-      color: white;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    footer {
-      text-align: center;
-      padding: 15px;
-      background-color: #0b3d91;
-      color: white;
-    }
-  </style>
-  <script>
-    function toggleClothing() {
-      const section = document.getElementById("clothing-sub");
-      section.style.display = section.style.display === "none" ? "block" : "none";
-    }
-
-    function filterProducts() {
-      const query = document.querySelector('.search').value.toLowerCase();
-      const products = document.querySelectorAll('.product-card');
-
-      products.forEach(card => {
-        const title = card.querySelector('h3').innerText.toLowerCase();
-        if (title.includes(query)) {
-          card.style.display = 'block';
-        } else {
-          card.style.display = 'none';
-        }
-      });
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelector('.search').addEventListener('input', filterProducts);
-    });
-  </script>
 </head>
 <body>
-  <header class="topbar">
-    <div class="logo">
-      <img src="images/background.jpg" alt="Jedot Logo">
+  <header>
+    <div class="hero">
+      <h1>Jedot Holding Services</h1>
+      <p class="slogan">A home for arts, skills & humanity</p>
     </div>
-    <input type="text" class="search" placeholder="Search books, music, clothes...">
-    <div class="nav-links">
-      <a href="books.html">Jedot Books</a>
-      <a href="music.html">Jedot Music</a>
-      <a href="#" onclick="toggleClothing()">Jedot African Designers Clothes</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
-    </div>
+    <nav>
+      <a href="about.html"><button>About</button></a>
+      <a href="contact.html"><button>Contact</button></a>
+      <a href="services.html"><button>Services</button></a>
+    </nav>
   </header>
 
-  <div id="clothing-sub" class="clothing-sub" style="text-align:center;">
-    <h3>Clothing Categories</h3>
-    <a href="male.html"><button>Men</button></a>
-    <a href="female.html"><button>Women</button></a>
-  </div>
-
-  <main class="featured-products">
-    <h2>Featured Books</h2>
-    <div class="product-grid">
-      <div class="product-card">
-        <img src="images/BothersomeKatecover.jpg" alt="Bothersome Kate">
-        <h3>Bothersome Kate</h3>
-        <a href="books.html">View</a>
-      </div>
-      <div class="product-card">
-        <img src="images/TheSkinflintcover.jpg" alt="The Skinflint">
-        <h3>The Skinflint</h3>
-        <a href="books.html">View</a>
-      </div>
-      <div class="product-card">
-        <img src="images/AlmostForever_cover.jpg" alt="Almost Forever">
-        <h3>Almost Forever</h3>
-        <a href="books.html">View</a>
-      </div>
+<main>
+  <section class="products">
+    <h2>Products</h2>
+    <div class="product-buttons">
+      <a href="books.html"><button>Jedot Books</button></a>
+      <a href="music.html"><button>Jedot Music</button></a>
+      <button onclick="toggleClothing()">Jedot African Designers Clothes</button>
     </div>
-  </main>
+
+    <div id="clothing-sub" style="display: none; margin-top: 10px;">
+      <h3>Clothing Categories</h3>
+      <a href="male.html"><button>Men</button></a>
+      <a href="female.html"><button>Women</button></a>
+    </div>
+  </section>
+</main>
+
+<script>
+  function toggleClothing() {
+    const section = document.getElementById("clothing-sub");
+    section.style.display = section.style.display === "none" ? "block" : "none";
+  }
+</script>
 
   <footer>
     <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
