--- a/books.html
+++ b/books.html
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <!-- Book: Almost Forever -->
+      <!-- Book 3: Almost Forever -->
 <div class="book-container">
   <div class="book-cover">
     <img src="images/AlmostForever_cover.jpg" alt="Almost Forever">
@@ -149,7 +149,47 @@
       <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
     </form>
+    
+  </div>
+</div>
 
+            <!-- Book 4: The Moonlight Stories of Doro -->
+<div class="book-container">
+  <div class="book-cover">
+    <img src="images/moonlightstoriesofdoroVolumeI.jpg" alt="The Moonlight Stories of Doro Volume I">
+  </div>
+  <div class="book-details">
+    <h2>The Moonlight Stories of Doro Volume I</h2>
+    <p><em>By Dorothy Ifeanyi Makasi</em></p>
+    <p>Famine in Animal Kingdom and other stories</p>
+    <p><strong>Format:</strong> eBook (PDF)</p>
+  </div>
+  <div class="book-actions">
+
+    <!-- Borrow for 2 weeks – €2.30 -->
+    <style>.pp-A3P8ZPN6KZ65N{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/A3P8ZPN6KZ65N" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-A3P8ZPN6KZ65N" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+
+    <!-- Borrow for 4 weeks – €4.60 -->
+    <style>.pp-GN6XX8UR8FVML{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/GN6XX8UR8FVML" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-GN6XX8UR8FVML" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+
+    <!-- Buy Forever – €5.30 -->
+    <style>.pp-QNUEWDSTCUNUY{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/QNUEWDSTCUNUY" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-QNUEWDSTCUNUY" type="submit" value="Buy Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+    
   </div>
 </div>
     </section>
