--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <header>
     <div class="hero">
-      <h1>Jedot Holding Services</h1>
-      <p class="slogan">A home for arts, skills & humanity</p>
+      <h1>                               </h1>
+      <p class="slogan">                                           </p>
     </div>
     <nav>
       <a href="about.html"><button>About</button></a>
