--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 </head>
 <body>
   <header>
-    <div class="hero">
-      <h1>                               </h1>
-      <p class="slogan">                                           </p>
-    </div>
+    <div class="hero"></div>
     <nav>
       <a href="about.html"><button>About</button></a>
       <a href="contact.html"><button>Contact</button></a>
