--- a/books.html
+++ b/books.html
@@ -153,7 +153,47 @@
   </div>
 </div>
 
-            <!-- Book 4: The Moonlight Stories of Doro -->
+      <!-- Book 4: Broken Marriage -->
+<div class="book-container">
+  <div class="book-cover">
+    <img src="images/BrokenMarriage_cover.jpeg" alt="Broken Marriage">
+  </div>
+  <div class="book-details">
+    <h2>Broken Marriage</h2>
+    <p><em>By Dorothy Ifeanyi Makasi</em></p>
+    <p>Evelyn’s world shatters when David rejects their third child and abandons the family in pursuit of wealth and pleasure. Stripped of everything, she rebuilds her life from nothing. Years later, David returns—broken and repentant—but some wounds never fully heal.</p>
+    <p><strong>Format:</strong> eBook (PDF)</p>
+  </div>
+  <div class="book-actions">
+
+    <!-- Borrow for 2 weeks – €3.50 -->
+    <style>.pp-6LYFSUMRNQ2DE{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/6LYFSUMRNQ2DE" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-6LYFSUMRNQ2DE" type="submit" value="Borrow for 2 weeks – €3.50" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+
+    <!-- Borrow for 4 weeks – €7.00 -->
+    <style>.pp-FNAFJKCSMAGTW{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/FNAFJKCSMAGTW" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-FNAFJKCSMAGTW" type="submit" value="Borrow for 4 weeks – €7.00" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+
+    <!-- Buy Forever – €8.60 -->
+    <style>.pp-8C96HF3KELFY2{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/8C96HF3KELFY2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-8C96HF3KELFY2" type="submit" value="Buy Forever – €8.60" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
+
+  </div>
+</div>
+      
+            <!-- Book 5: The Moonlight Stories of Doro -->
 <div class="book-container">
   <div class="book-cover">
     <img src="images/moonlightstoriesofdoroVolumeI.jpg" alt="The Moonlight Stories of Doro Volume I">
