--- a/books.html
+++ b/books.html
@@ -193,43 +193,73 @@
   </div>
 </div>
       
-            <!-- Book 5: The Moonlight Stories of Doro -->
+           <!-- Book 5: The Moonlight Stories of Doro -->
 <div class="book-container">
   <div class="book-cover">
-    <img src="images/moonlightstoriesofdoroVolumeI.jpg" alt="The Moonlight Stories of Doro Volume I">
+    <img src="images/themoonlightstoriesofdorovolumeI_cover.jpg" alt="The Moonlight Stories of Doro Volume I">
   </div>
   <div class="book-details">
     <h2>The Moonlight Stories of Doro Volume I</h2>
     <p><em>By Dorothy Ifeanyi Makasi</em></p>
-    <p>Famine in Animal Kingdom and other stories</p>
-    <p><strong>Format:</strong> eBook (PDF)</p>
+    <p><strong>Description:</strong> <br>
+      <em>"Moonlight Stories" takes its name from the traditional tales once shared with teenagers and adults in Eastern Nigeria, during a time when there was no electricity. Communities would gather under the moonlight to play and listen to the storyteller. In this book, Doro—affectionately known as Lady Doro—assumes the role of storyteller. The book is divided into three segments, each offering unique stories for readers to discover.</em>
+    </p>
   </div>
+  
   <div class="book-actions">
 
-    <!-- Borrow for 2 weeks – €2.30 -->
-    <style>.pp-A3P8ZPN6KZ65N{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-<form action="https://www.paypal.com/ncp/payment/A3P8ZPN6KZ65N" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-A3P8ZPN6KZ65N" type="submit" value="Borrow for 2 weeks – €2.30" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-</form>
+    <!-- Hardcopy Section -->
+    <h3>Hardcopy</h3>
 
-    <!-- Borrow for 4 weeks – €4.60 -->
-    <style>.pp-GN6XX8UR8FVML{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-<form action="https://www.paypal.com/ncp/payment/GN6XX8UR8FVML" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-GN6XX8UR8FVML" type="submit" value="Borrow for 4 weeks – €4.60" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-</form>
+    <!-- Buy Hardcopy – €8.00 -->
+    <style>.pp-JEVULRLB2MMDU{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/JEVULRLB2MMDU" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-JEVULRLB2MMDU" type="submit" value="Buy Hardcopy – €8.00" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
 
-    <!-- Buy Forever – €5.30 -->
-    <style>.pp-QNUEWDSTCUNUY{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-<form action="https://www.paypal.com/ncp/payment/QNUEWDSTCUNUY" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-QNUEWDSTCUNUY" type="submit" value="Buy Forever – €5.30" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-  <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-</form>
-    
+    <hr style="margin:1rem 0;">
+
+    <!-- eBook Section -->
+    <h3>eBook</h3>
+
+    <!-- Borrow for 2 weeks – €3.00 -->
+    <style>.pp-ARGSRUC74XTZL{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/ARGSRUC74XTZL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-ARGSRUC74XTZL" type="submit" value="Borrow for 2 weeks – €3.00" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
+
+    <!-- Borrow for 4 weeks – €5.60 -->
+    <style>.pp-U6QR3QFAXH8CG{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/U6QR3QFAXH8CG" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-U6QR3QFAXH8CG" type="submit" value="Borrow for 4 weeks – €5.60" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
+
+    <!-- Buy Forever – €6.80 -->
+    <style>.pp-9VUQRQW6VTKW2{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+    <form action="https://www.paypal.com/ncp/payment/9VUQRQW6VTKW2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+      <input class="pp-9VUQRQW6VTKW2" type="submit" value="Buy Forever – €6.80" />
+      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <section style="font-size: 0.75rem;"> Powered by 
+        <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
+             alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
+      </section>
+    </form>
+
   </div>
 </div>
     </section>
