Fix image tag formatting for PayPal buttons

--- a/books.html
+++ b/books.html
@@ -97,7 +97,7 @@
       <div>
   <form action="https://www.paypal.com/ncp/payment/F5AR2EDSRJZX4" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
     <input class="paypal-btn" type="submit" value="Paga €8,00" />
-    <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+    <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
     <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
   </form>
 </div>
@@ -168,7 +168,7 @@
     <!-- Buy Hardcopy – €12.80 -->
     <form action="https://www.paypal.com/ncp/payment/J78A9SR97PJUQ" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
       <input class="paypal-btn" type="submit" value="Buy Hardcopy – €12.80" />
-      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
              alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
@@ -237,21 +237,21 @@
     <!-- Borrow for 2 weeks – €4.80 -->
 <form action="https://www.paypal.com/ncp/payment/6LYFSUMRNQ2DE" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
   <input class="paypal-btn" type="submit" value="Borrow for 2 weeks – €4.80" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
 
     <!-- Borrow for 4 weeks – €8.50 -->
 <form action="https://www.paypal.com/ncp/payment/FNAFJKCSMAGTW" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
   <input class="paypal-btn" type="submit" value="Borrow for 4 weeks – €8.50" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
 
     <!-- Buy Forever – €11.50 -->
 <form action="https://www.paypal.com/ncp/payment/8C96HF3KELFY2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
   <input class="paypal-btn" type="submit" value="Buy Forever – €11.50" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
   <section style="font-size: 0.75rem;"> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
 </form>
 
@@ -279,7 +279,7 @@
     <!-- Buy Hardcopy – €8.00 -->
     <form action="https://www.paypal.com/ncp/payment/JEVULRLB2MMDU" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
       <input class="paypal-btn" type="submit" value="Buy Hardcopy – €8.00" />
-      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
              alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
@@ -294,7 +294,7 @@
     <!-- Borrow for 2 weeks – €3.00 -->
     <form action="https://www.paypal.com/ncp/payment/ARGSRUC74XTZL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
       <input class="paypal-btn" type="submit" value="Borrow for 2 weeks – €3.00" />
-      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
              alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
@@ -304,7 +304,7 @@
     <!-- Borrow for 4 weeks – €5.60 -->
     <form action="https://www.paypal.com/ncp/payment/U6QR3QFAXH8CG" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
       <input class="paypal-btn" type="submit" value="Borrow for 4 weeks – €5.60" />
-      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
              alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
@@ -314,7 +314,7 @@
     <!-- Buy Forever – €6.80 -->
     <form action="https://www.paypal.com/ncp/payment/9VUQRQW6VTKW2" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
       <input class="paypal-btn" type="submit" value="Buy Forever – €6.80" />
-      <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+      <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
       <section style="font-size: 0.75rem;"> Powered by 
         <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" 
              alt="paypal" style="height:0.875rem;vertical-align:middle;"/>
