Modify footer copyright and button text
Updated footer copyright date and button label.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="product-buttons">
       <a href="books.html"><button>Jedot Books</button></a>
       <a href="music.html"><button>Jedot Music</button></a>
-      <button onclick="toggleClothing()">Jedot African Designers Clothes</button>
+      <button onclick="toggleClothing()">Jedot African Designers Wears</button>
     </div>
 
     <div id="clothing-sub" style="display: none; margin-top: 10px;">
@@ -47,7 +47,8 @@
 </script>
 
   <footer>
-    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+    <p>&copy; 2025 - 2026 Jedot Holding Services. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
