Update copyright year in footer

--- a/books.html
+++ b/books.html
@@ -363,7 +363,7 @@
   </main>
 
   <footer>
-    <p style="text-align:center">&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+    <p style="text-align:center">&copy; 2025 - 2026 Jedot Holding Services. All rights reserved.</p>
   </footer>
 
   <script src="https://www.paypal.com/sdk/js?client-id=AT45qNgguC6V2qg7rPX727d0d6a27Zzfb_GSF8N-6yT2mtm1Zq_nao8Y4dJYbLLwAmemWsrUMqvypHse&disable-funding=paylater&currency=EUR"></script>
