--- a/female.html
+++ b/female.html
@@ -429,7 +429,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Jedot Holding Services. All rights reserved.</p>
+    <p>&copy; 2025 - 2026 Jedot Holding Services. All rights reserved.</p>
   </footer>
 </body>
 </html>
